[package]
name = "nix-simple-deploy"
version = "0.1.0"
description = "Deploy software or an entire NixOS system configuration to another NixOS system"
authors = ["misuzu <bakalolka@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
cmd_lib = "0.7.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
