[package]
name = "nix-simple-deploy"
version = "0.2.1"
description = "Deploy software or an entire NixOS system configuration to another NixOS system"
authors = ["misuzu <bakalolka@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["nix", "nixos", "devops"]
homepage = "https://github.com/misuzu/nix-simple-deploy"
repository = "https://github.com/misuzu/nix-simple-deploy"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2.33.3"
subprocess = "0.2.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
